--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 /TuyenSinh/nbproject/private/
 /Bai4/nbproject/private/
 /Bai5/nbproject/private/
+/Bai6/nbproject/private/
+/Bai7/nbproject/private/
