--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,9 @@
 /Bai8/build/
 /Bai4/build/
 /Bai10/nbproject/private/
+/JavaReview/build/
+/Bai2/build/
+/Bai3/build/
+/Bai6/build/
+/Bai5/build/
+/Bai7/build/
